--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-spinners": "^0.11.0",
     "redux": "^4.1.1",
     "web-vitals": "^1.1.2"
